# pybridge

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
src/: __init__.py  pybridgeclient.py
tests/: test.py
