[tool.poetry]
name = "pybridgeclient"
version = "0.1.0"
description = "A Python package for interacting with APIs using OpenAPI schema."
authors = ["sinan tan <sinantanwork@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sinantan/pybridge"
repository = "https://github.com/sinantan/pybridge"
documentation = "https://pybridge.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"